<resources>
    <string name="server_client_id">468601289624-if5agp4dd7ufej3cptkp1fj16qctmhhl.apps.googleusercontent.com</string>
    <string name="app_name">1StopClick</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="btn_login">Login</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_google_signin">Login Using Google</string>
    <string name="title_user_registration">User Registration</string>
    <string name="title_forget_password">Forget Password</string>

    <string name="hint_name">Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_dob">Date of Birth</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_profile_photo">Photo Profile</string>
    <string name="navigation_view_header_title">1StopClick</string>

    <string name="text_password_recovery_success">Password recovery successful. Please check your email</string>

    <string name="label_release_date">Release Date</string>
    <string name="label_vote">Vote Average:</string>
    <string name="label_genres">Genres</string>
    <string name="label_overview">Overview</string>
    <string name="label_trailer">Trailer</string>
    <string name="label_production_details">Production Details</string>
    <string name="label_belongs">Belongs To Collection</string>
    <string name="label_budget">Budget</string>
    <string name="label_revenue">Revenue</string>
    <string name="label_companies">Companies</string>
    <string name="label_countries">Countries</string>
    <string name="navigation_open_drawer">open drawer</string>
    <string name="navigation_close_drawer">close drawer</string>
</resources>
