<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/title_user_registration"/>

    <LinearLayout
        android:id="@+id/layoutRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey"></android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/first_name_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_first_name"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dob_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_dob"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_number_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phone"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/photo_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_profile_photo"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldPhotoProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutRegistration"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <android.support.design.button.MaterialButton
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_submit" />

        <android.support.design.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/buttonSubmit"
            android:layout_toLeftOf="@id/buttonSubmit"
            android:text="@string/btn_cancel" />
    </RelativeLayout>

    <!-- Progress bar overlay; shown while login is in progress -->
    <include layout="@layout/progress_overlay"/>
</RelativeLayout>