<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/title_forget_password"/>
    <LinearLayout
        android:id="@+id/layoutForgetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email"
            android:theme="@style/BasicInputLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutForgetPassword"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingLeft="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_submit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/buttonSubmit"
            android:layout_toLeftOf="@id/buttonSubmit"
            android:text="@string/btn_cancel" />
    </RelativeLayout>

    <!-- Progress bar overlay; shown while login is in progress -->
    <include layout="@layout/progress_overlay"/>
</RelativeLayout>