<?xml version="1.0" encoding="utf-8"?><!--
  ~ Created by omrobbie.
  ~ Copyright (c) 2018. All rights reserved.
  ~ Last modified 9/29/17 12:30 PM.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_release_date"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_vote"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/detail_rating" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_genres"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_genres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/watchMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Buy Album" />
    </LinearLayout>


</LinearLayout>
