<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/layoutRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_email"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey"></android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input"
            style="@style/BasicInputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:theme="@style/BasicInputLayoutStyle">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/fieldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorDarkGrey" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutRegistration"
        android:orientation="horizontal">

        <android.support.design.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/btn_login" />

        <android.support.design.button.MaterialButton
            android:id="@+id/buttonSignUp"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:layout_toStartOf="@id/buttonSignIn"
            android:layout_toLeftOf="@id/buttonSignIn"
            android:text="@string/sign_up" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/socialLoginButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutButtons"
        android:orientation="horizontal">
        <com.google.android.gms.common.SignInButton
            android:id="@+id/buttonGoogleSignin"
            android:layout_marginTop="60dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


</RelativeLayout>